fixed tab size on mobile

--- a/src/shared/components/Contentful/Tabs/themes/vertical.scss
+++ b/src/shared/components/Contentful/Tabs/themes/vertical.scss
@@ -52,7 +52,7 @@ li.tab {
   @media (max-width: 768px) {
     padding-right: 20px;
     border-bottom: 5px solid $gray-border-color;
-    min-width: auto;
+    min-width: auto !important;
 
     &:first-child {
       padding-left: 7px;
